--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   },
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
+    "axios": "^1.7.2",
+    "form-data": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
     "react-device-detect": "^2.2.3",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "winston": "^3.13.0"
   },
   "devDependencies": {
     "@types/node": "^20",
