--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "axios": "^1.7.2",
+    "flowbite": "^2.4.1",
     "form-data": "^4.0.0",
     "next": "14.2.4",
     "react": "^18",
